// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generated hometown — characterization (golden) > plot + entrance placement is stable for 1 plots 1`] = `
{
  "cols": 16,
  "entrance": {
    "x": 8,
    "y": 18,
  },
  "plots": [
    {
      "col": 2,
      "doorCol": 3,
      "doorRow": 6,
      "edges": undefined,
      "h": 4,
      "mask": undefined,
      "row": 3,
      "w": 3,
    },
  ],
  "rows": 20,
}
`;

exports[`generated hometown — characterization (golden) > plot + entrance placement is stable for 6 plots 1`] = `
{
  "cols": 24,
  "entrance": {
    "x": 12,
    "y": 25,
  },
  "plots": [
    {
      "col": 2,
      "doorCol": 3,
      "doorRow": 13,
      "edges": undefined,
      "h": 4,
      "mask": undefined,
      "row": 10,
      "w": 3,
    },
    {
      "col": 6,
      "doorCol": 7,
      "doorRow": 13,
      "edges": undefined,
      "h": 4,
      "mask": undefined,
      "row": 10,
      "w": 3,
    },
    {
      "col": 10,
      "doorCol": 11,
      "doorRow": 13,
      "edges": undefined,
      "h": 4,
      "mask": undefined,
      "row": 10,
      "w": 3,
    },
    {
      "col": 14,
      "doorCol": 15,
      "doorRow": 13,
      "edges": undefined,
      "h": 4,
      "mask": undefined,
      "row": 10,
      "w": 3,
    },
    {
      "col": 18,
      "doorCol": 19,
      "doorRow": 13,
      "edges": undefined,
      "h": 4,
      "mask": undefined,
      "row": 10,
      "w": 3,
    },
    {
      "col": 2,
      "doorCol": 3,
      "doorRow": 6,
      "edges": undefined,
      "h": 4,
      "mask": undefined,
      "row": 3,
      "w": 3,
    },
  ],
  "rows": 27,
}
`;

exports[`generated hometown — characterization (golden) > plot + entrance placement is stable for 12 plots 1`] = `
{
  "cols": 24,
  "entrance": {
    "x": 12,
    "y": 32,
  },
  "plots": [
    {
      "col": 2,
      "doorCol": 3,
      "doorRow": 20,
      "edges": undefined,
      "h": 4,
      "mask": undefined,
      "row": 17,
      "w": 3,
    },
    {
      "col": 6,
      "doorCol": 7,
      "doorRow": 20,
      "edges": undefined,
      "h": 4,
      "mask": undefined,
      "row": 17,
      "w": 3,
    },
    {
      "col": 10,
      "doorCol": 11,
      "doorRow": 20,
      "edges": undefined,
      "h": 4,
      "mask": undefined,
      "row": 17,
      "w": 3,
    },
    {
      "col": 14,
      "doorCol": 15,
      "doorRow": 20,
      "edges": undefined,
      "h": 4,
      "mask": undefined,
      "row": 17,
      "w": 3,
    },
    {
      "col": 18,
      "doorCol": 19,
      "doorRow": 20,
      "edges": undefined,
      "h": 4,
      "mask": undefined,
      "row": 17,
      "w": 3,
    },
    {
      "col": 2,
      "doorCol": 3,
      "doorRow": 13,
      "edges": undefined,
      "h": 4,
      "mask": undefined,
      "row": 10,
      "w": 3,
    },
    {
      "col": 6,
      "doorCol": 7,
      "doorRow": 13,
      "edges": undefined,
      "h": 4,
      "mask": undefined,
      "row": 10,
      "w": 3,
    },
    {
      "col": 10,
      "doorCol": 11,
      "doorRow": 13,
      "edges": undefined,
      "h": 4,
      "mask": undefined,
      "row": 10,
      "w": 3,
    },
    {
      "col": 14,
      "doorCol": 15,
      "doorRow": 13,
      "edges": undefined,
      "h": 4,
      "mask": undefined,
      "row": 10,
      "w": 3,
    },
    {
      "col": 18,
      "doorCol": 19,
      "doorRow": 13,
      "edges": undefined,
      "h": 4,
      "mask": undefined,
      "row": 10,
      "w": 3,
    },
    {
      "col": 2,
      "doorCol": 3,
      "doorRow": 6,
      "edges": undefined,
      "h": 4,
      "mask": undefined,
      "row": 3,
      "w": 3,
    },
    {
      "col": 6,
      "doorCol": 7,
      "doorRow": 6,
      "edges": undefined,
      "h": 4,
      "mask": undefined,
      "row": 3,
      "w": 3,
    },
  ],
  "rows": 34,
}
`;

exports[`generated hometown — characterization (golden) > terrain layout is stable for 1 plots 1`] = `
[
  "TTTTTTTTTTTTTTTT",
  "T:****.........T",
  "T:.**..........T",
  "T:.............T",
  "T:.............T",
  "T:.............T",
  "T:.............T",
  "T::::::::::::::T",
  "T:......:......T",
  "T:......:......T",
  "T:..gggg:ggggg.T",
  "T:..gggg:ggggg.T",
  "T:..gggg:ggggg.T",
  "T:..gggg:ggggg.T",
  "T:..gggg:ggggg.T",
  "T:..gggg:ggggg.T",
  "T:..gggg:ggggg*T",
  "T:.....*:*****.T",
  "T:.....s:***.*.T",
  "TTTTTTTT:TTTTTTT",
]
`;

exports[`generated hometown — characterization (golden) > terrain layout is stable for 6 plots 1`] = `
[
  "TTTTTTTTTTTTTTTTTTTTTTTT",
  "T:****.........****..**T",
  "T:.**..........****..**T",
  "T:.....................T",
  "T:.....................T",
  "T:.....................T",
  "T:.....................T",
  "T::::::::::::::::::::::T",
  "T:....................*T",
  "T:.....................T",
  "T:.....................T",
  "T:.....................T",
  "T:.....................T",
  "T:.....................T",
  "T::::::::::::::::::::::T",
  "T:.........*:*..*.****.T",
  "T:.......***:**...****.T",
  "T:..gggggggg:ggggggggg.T",
  "T:..gggggggg:ggggggggg.T",
  "T:..gggggggg:ggggggggg.T",
  "T:..gggggggg:ggggggggg.T",
  "T:..gggggggg:ggggggggg.T",
  "T:..gggggggg:ggggggggg.T",
  "T:**gggggggg:ggggggggg*T",
  "T:****......:..********T",
  "T:****.....s:.*********T",
  "TTTTTTTTTTTT:TTTTTTTTTTT",
]
`;

exports[`generated hometown — characterization (golden) > terrain layout is stable for 12 plots 1`] = `
[
  "TTTTTTTTTTTTTTTTTTTTTTTT",
  "T:****.........****..**T",
  "T:.**..........****..**T",
  "T:.....................T",
  "T:.....................T",
  "T:.....................T",
  "T:.....................T",
  "T::::::::::::::::::::::T",
  "T:....................*T",
  "T:.....................T",
  "T:.....................T",
  "T:.....................T",
  "T:.....................T",
  "T:.....................T",
  "T::::::::::::::::::::::T",
  "T:.........***..*.****.T",
  "T:.......******...****.T",
  "T:.....................T",
  "T:.....................T",
  "T:.....................T",
  "T:.....................T",
  "T::::::::::::::::::::::T",
  "T:.....***..:..*****...T",
  "T:**.**.....:.*********T",
  "T:**gggggggg:ggggggggg*T",
  "T:**gggggggg:ggggggggg*T",
  "T:*.gggggggg:ggggggggg*T",
  "T:*.gggggggg:ggggggggg*T",
  "T:..gggggggg:ggggggggg.T",
  "T:..gggggggg:ggggggggg.T",
  "T:**gggggggg:ggggggggg.T",
  "T:******....:..........T",
  "T:*******..s:..........T",
  "TTTTTTTTTTTT:TTTTTTTTTTT",
]
`;
